tests/baselines/reference/parserTypeQuery3.errors.txt
==== tests/cases/compiler/parserTypeQuery3.ts (1 errors) ====
    var v: typeof A.
                    
!!! parserTypeQuery3.ts(1,17): error TS1003: Identifier expected.